UT/c.err
futils.cc:82:48: error: expected expression
        int err = BL_futils_create_directories(TEST_DIRECTORIES);
                                               ^
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:16: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
               ^
futils.cc:82:48: error: use of undeclared identifier 'home'; did you mean 'time'?
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:17: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                ^
/usr/include/time.h:158:8: note: 'time' declared here
time_t time(time_t *);
       ^
futils.cc:82:48: error: use of undeclared identifier 'yoshinao'
        int err = BL_futils_create_directories(TEST_DIRECTORIES);
                                               ^
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:22: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                     ^
futils.cc:82:48: error: use of undeclared identifier 'REPOS'
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:31: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                              ^
futils.cc:82:48: error: use of undeclared identifier 'WORK'
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:37: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                                    ^
futils.cc:82:48: error: use of undeclared identifier 'UTData'
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:42: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                                         ^
futils.cc:84:42: error: expected expression
        ASSERT_EQ(true, BL_futils_exists(TEST_DIRECTORIES));
                                         ^
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:16: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
               ^
futils.cc:84:42: error: use of undeclared identifier 'home'; did you mean 'time'?
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:17: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                ^
/usr/include/time.h:158:8: note: 'time' declared here
time_t time(time_t *);
       ^
futils.cc:84:42: error: use of undeclared identifier 'yoshinao'
        ASSERT_EQ(true, BL_futils_exists(TEST_DIRECTORIES));
                                         ^
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:22: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                     ^
futils.cc:84:42: error: use of undeclared identifier 'REPOS'
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:31: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                              ^
futils.cc:84:42: error: use of undeclared identifier 'WORK'
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:37: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                                    ^
futils.cc:84:42: error: use of undeclared identifier 'UTData'
futils.cc:77:29: note: expanded from macro 'TEST_DIRECTORIES'
#define TEST_DIRECTORIES    UTDATA "Out/1/2/3"
                            ^
<command line>:1:42: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                                         ^
futils.cc:86:44: error: expected expression
        err = BL_futils_remove_directories(TEST_DIRECTORIES2);
                                           ^
futils.cc:78:29: note: expanded from macro 'TEST_DIRECTORIES2'
#define TEST_DIRECTORIES2   UTDATA "Out/1"
                            ^
<command line>:1:16: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
               ^
futils.cc:86:44: error: use of undeclared identifier 'home'; did you mean 'time'?
futils.cc:78:29: note: expanded from macro 'TEST_DIRECTORIES2'
#define TEST_DIRECTORIES2   UTDATA "Out/1"
                            ^
<command line>:1:17: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                ^
/usr/include/time.h:158:8: note: 'time' declared here
time_t time(time_t *);
       ^
futils.cc:86:44: error: use of undeclared identifier 'yoshinao'
        err = BL_futils_remove_directories(TEST_DIRECTORIES2);
                                           ^
futils.cc:78:29: note: expanded from macro 'TEST_DIRECTORIES2'
#define TEST_DIRECTORIES2   UTDATA "Out/1"
                            ^
<command line>:1:22: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                     ^
futils.cc:86:44: error: use of undeclared identifier 'REPOS'
futils.cc:78:29: note: expanded from macro 'TEST_DIRECTORIES2'
#define TEST_DIRECTORIES2   UTDATA "Out/1"
                            ^
<command line>:1:31: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                              ^
futils.cc:86:44: error: use of undeclared identifier 'WORK'
futils.cc:78:29: note: expanded from macro 'TEST_DIRECTORIES2'
#define TEST_DIRECTORIES2   UTDATA "Out/1"
                            ^
<command line>:1:37: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                                    ^
futils.cc:86:44: error: use of undeclared identifier 'UTData'
futils.cc:78:29: note: expanded from macro 'TEST_DIRECTORIES2'
#define TEST_DIRECTORIES2   UTDATA "Out/1"
                            ^
<command line>:1:42: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
                                         ^
futils.cc:88:43: error: expected expression
        ASSERT_EQ(false, BL_futils_exists(TEST_DIRECTORIES2));
                                          ^
futils.cc:78:29: note: expanded from macro 'TEST_DIRECTORIES2'
#define TEST_DIRECTORIES2   UTDATA "Out/1"
                            ^
<command line>:1:16: note: expanded from here
#define UTDATA /home/yoshinao/REPOS/WORK/UTData/
               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
